Fix layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,15 @@ h1 {
     border-radius: 7px;
     box-shadow: 0 2px 5px #ccc;
     padding: 10px;
-    width: 240px;
-    margin: 16px;
+    width: 200px;
+    margin: 10px;
     float: left;
   }
 
-#deleteTaskSpan:hover {
+#deleteTaskCursor:hover {
     cursor: pointer;
+}
+
+#leftPanel {
+    background-color: aquamarine; /* just a test colour */
 }
